# subxt

./: Cargo.toml
client/: Cargo.toml
codegen/src/types/: mod.rs
core/: Cargo.toml
core/src/tx/: payload.rs  signer.rs
proc-macro/src/: test.rs
src/: events.rs  lib.rs  metadata.rs  rpc.rs  runtimes.rs  subscription.rs
src/extrinsic/: signer.rs
subxt/: Cargo.toml
subxt/src/: lib.rs
subxt/src/backend/legacy/: mod.rs  rpc_methods.rs
subxt/src/blocks/: blocks_client.rs
subxt/src/error/: mod.rs
subxt/src/tx/: mod.rs  signer.rs  tx_payload.rs  tx_progress.rs
