[workspace]
members = [".", "client", "proc-macro"]

[package]
name = "substrate-subxt"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = []
client = ["substrate-subxt-client"]

[dependencies]
log = "0.4.14"
thiserror = "1.0.24"
futures = "0.3.13"
jsonrpsee-types = "=0.2.0"
jsonrpsee-ws-client = "=0.2.0"
jsonrpsee-http-client = "=0.2.0"

num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.1"
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive", "full"] }
# temporarily pinning funty via codec -> bitvec until https://github.com/myrrlyn/funty/issues/3
# and https://github.com/bitvecto-rs/bitvec/issues/105 are resolved
funty = "=1.1.0"
dyn-clone = "1.0.4"
frame-metadata = { git = "https://github.com/boolnetwork/substrate.git", branch = "hl-fix-syncing-stucks", features = ["std"]}
frame-support = { git = "https://github.com/boolnetwork/substrate.git", branch = "hl-fix-syncing-stucks" }
sp-runtime = { git = "https://github.com/boolnetwork/substrate.git", branch = "hl-fix-syncing-stucks" }
sp-version = { git = "https://github.com/boolnetwork/substrate.git", branch = "hl-fix-syncing-stucks" }
sp-std = { git = "https://github.com/boolnetwork/substrate.git", branch = "hl-fix-syncing-stucks" }
application-crypto = { git = "https://github.com/boolnetwork/substrate.git", branch = "hl-fix-syncing-stucks", package = "sp-application-crypto", default-features = false, features = ["std"]}
pallet-staking = { git = "https://github.com/boolnetwork/substrate.git", branch = "hl-fix-syncing-stucks" }
sp-rpc = { git = "https://github.com/boolnetwork/substrate.git", branch = "hl-fix-syncing-stucks" }
sp-core = { git = "https://github.com/boolnetwork/substrate.git", branch = "hl-fix-syncing-stucks" }
substrate-subxt-client = { version = "0.7.0", path = "client", optional = true }
substrate-subxt-proc-macro = { version = "0.15.0", path = "proc-macro" }
hex = "0.4.3"
libsecp256k1 = { version = "0.3.2", default-features = false, features = ["hmac"] }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
env_logger = "0.8.3"
frame-system = "3.0.0"
pallet-balances = "3.0.0"
sp-keyring = "3.0.0"
tempdir = "0.3.7"
wabt = "0.10.0"
which = "4.0.2"
assert_matches = "1.5.0"
